Changelog for MyUSB:
=======================================

	TODO:
		1) Mass Storage app compliance
		2) HID Boot not enumerating one some machines
		3) Auto-detect clock frequency via watchdog

	Version 1.5.3 - UNRELEASED:
	--------------------------------------------
		* Fixed CDC bootloader using pgmspace macros for some descriptors inappropriately
		* Updated all Mouse and Keyboard device demos to include boot protocol support (now works in BIOS)
		* Renamed bootloader directories to remove spaces, which were causing build problems on several OSes
		* Removed serial number strings from all but the MassStore demo where it is required - users were not
		  modifing the code to either ommit the descriptor or use a unique serial per device causing problems
		  when multiple units of the same device were plugged in at the same time
		* AudioOutput and AudioInput demos now correctly silence endpoints when not enabled by the host
		* Added KeyboardMouse demo (Keyboard and Mouse functionality combined into a single demo)
		* Added DriverStubs directory to house board level driver templates, to make MyUSB compatible custom board
		  driver creation easier
		* Extended MassStorage demo to support multiple LUNs, 2 by default
		* Fixed incorrect device address mask, preventing the device from enumerating with addresses larger than 63
		* Fixed incorrect data direction mask in the GetStatus standard request, preventing it from being handled
		* Fixed incorrect GetStatus standard request for endpoints, now returns the endpoint STALL status correctly
		* Added in new USB_RemoteWakeupEnabled and USB_CurrentlySelfPowered flags rather than using fixed values
		* Added DualCDC demo to demonstrate the use of Interface Association Descriptors
		* Added pipe NAK detection and clearing API
		* Added pipe status change (NAK, STALL, etc.) interrupt API
		* Fixed MassStorageHost demo so that it no longer freezes randomly when issuing several commands in a row