@@ -107,9 +107,9 @@ USB_Descriptor_String_t LanguageString PROGMEM =
 
 USB_Descriptor_String_t ProductString =
 {
-	Header:                 {Size: USB_STRING_LEN(20), Type: DTYPE_String},
+	Header:                 {Size: USB_STRING_LEN(15), Type: DTYPE_String},
 		
-	UnicodeString:          L"MyUSB DFU Bootloader"
+	UnicodeString:          L"AVR DFU BOOTLDR"
 };
 
 bool USB_GetDescriptor(const uint16_t wValue, const uint8_t wIndex,
